Adding Header and Footer

--- a/index.html
+++ b/index.html
@@ -5,19 +5,46 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>K-Beauty</title>
+
+	<!----Google Fonts-->
 	<link href="https://fonts.googleapis.com/css2?family=Urbanist:wght@400;700&family=Rubik:wght@400;700&display=swap" rel="stylesheet">
-
-
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-
-    <!-- Bootstrap CSS Link -->
-    <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"> -->
-    <!-- Custom Styles -->
-    <link rel="stylesheet" href="styles.css">
+    
+	<!----CSS---->
+	<link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-	
+	   	<!-- Navbar -->
+	<nav class="navbar navbar-expand-sm  navbar-dark bg-dark ">
+		<div class="container-fluid">
+		  <a class="navbar-brand" href="javascript:void(0)">K-Beauty</a>
+		  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
+			<span class="navbar-toggler-icon"></span>
+		  </button>
+		  <div class="collapse navbar-collapse" id="mynavbar">
+			<ul class="navbar-nav me-auto">
+			  <li class="nav-item">
+				<a class="nav-link" href="javascript:void(0)">Home</a>
+			  </li>
+			  <li class="nav-item">
+				<a class="nav-link" href="javascript:void(0)">Products</a>
+			  </li>
+			  <li class="nav-item">
+				<a class="nav-link" href="javascript:void(0)">About</a>
+			  </li>
+			</ul>
+			<form class="d-flex" style="width: 40%;">
+			  <input class="form-control me-2" type="text" placeholder="Search product" style="width: 100%;">
+			  <button class="btn btn-primary" type="button">Search</button>
+			</form>
+		  </div>
+		</div>
+	  </nav>
+
+
+	<!-- Coming Soon-->
+	 <div>
 		<div class="row row-cols-2 ">
 			<div class="col">
 				<img src="images/container1.webp" alt="">
@@ -42,4 +69,19 @@
 		
 			</div>
 		
-		  <div class="row">
+		
+		
+		<!-- Footer -->
+		<footer class="text-center bg-dark">
+			<div class="container">
+				<div class="row">
+					<div class="col-lg-12">
+						<!-- Social media links -->
+						
+						<p style="color: white; margin: 4%;">&copy; 2024 K-Beauty. All Rights Reserved.</p>
+					</div>
+				</div>
+			</div>
+		</footer>
+
+		
